--- a/package.json
+++ b/package.json
@@ -16,13 +16,17 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "2.0.4",
+    "react-infinite-scroll-component": "6.1.0",
+    "react-intersection-observer": "9.5.3",
     "react-redux": "9.1.0",
-    "react-router-dom": "6.21.3"
+    "react-router-dom": "6.21.3",
+    "react-virtualized": "9.22.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@types/react-redux": "7.1.33",
+    "@types/react-virtualized": "^9.21.29",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react": "^4.2.1",
